# agile-community-rules-classification

./: Makefile  README.md  kaggle_submission.py  kaggle_submission_minimal.py  pyproject.toml  requirements.txt  submission_baseline.csv  submission_text_only.csv
agile_community_rules_classification/: __init__.py  baseline_model.py  data.py  dataset.py  features.py  plots.py  predict_baseline.py  predict_text_only.py  text_only_baseline.py  train_baseline.py  train_text_only.py
agile_community_rules_classification/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: baseline_eval_results.json  baseline_similarity_model.pkl  text_only_baseline_model.pkl
notebooks/: eda.ipynb
